syntax = "proto3";

package domain;

option java_multiple_files = true;
option java_package = "com.rabbit.samples.grpc.helloservice.proto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}
